FE: Fix table to collapse borders

--- a/UserManagement.Front/styles.css
+++ b/UserManagement.Front/styles.css
@@ -1,5 +1,22 @@
-table, th, td {
+.users-table {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.users-table th {
+    text-align: left;
+}
+
+.users-table th, 
+.users-table td {
+    padding: 5px 0 5px 10px;
+}
+
+.users-table, 
+.users-table th, 
+.users-table td {
     border: 1px solid black;
+    border-collapse: collapse;
 }
 
 .center {
